# src/routes/entries.route.ts
@@ -6,6 +6,6 @@ const router = Router();
 const c = Container.get(EntryController);
 
 router.post('/', c.create);
-router.post('/:id/score', c.setScore);
+router.post('/score', c.setScore);
 
 export default router;
